[metadata]
name = linepulsepy
version = 0.1.1
author = Vinod Panchangam
author_email = vinodkumarvk060@gmail.com
description = Line-by-line performance profiler for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vinodkumar060/linepulsepy
license = Proprietary

classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent
    
[options]
packages = find:
python_requires = >=3.7
